# Accolade

./: .gitignore  README.md  pyproject.toml
.secrets/: hf_token.example
data/input/: app_config.json  patients.json
models/: README.md
notebooks/: conversation_demo.ipynb  conversation_graph_visualization.ipynb  deepseek_simple_chat.ipynb  langgraph_diagram.ipynb
scripts/: run_assistant_node_demo.py  run_conversation_flow_demo.py  run_demo.py  run_interactive_chat.py  run_patient_mock_demo.py
slides/: werka_demo_slides.md  werka_demo_talk_track.md
src/accolade_med_assistant/: config.py  config_runtime.py
src/accolade_med_assistant/data/: patient_repository.py
src/accolade_med_assistant/inference/: dual_model_controller.py  local_llm.py
src/accolade_med_assistant/intake/: iterative_intake_workflow.py  patient_intake_mock.py
src/accolade_med_assistant/models/: types.py
src/accolade_med_assistant/triage/: triage_router.py
src/accolade_med_assistant/workflow/: clinical_assistant_graph.py  conversation_agent_graph.py  session_triage.py
tests/: test_triage_router.py
