[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "accolade-med-assistant"
version = "0.1.0"
description = "Offline-first medical assistant POC"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.0",
  "langgraph>=1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
